######################################################################################
#								Pelion build file									 #
######################################################################################

# Project
######################################################################################
project('Pelion', 'cpp',
  version : '1.0',
  default_options : ['warning_level=3'] )
######################################################################################

# Dependencies
######################################################################################
glfw = dependency('glfw3')
gl = dependency('gl')
######################################################################################

# Misc
######################################################################################
include_dir = include_directories('./include')
######################################################################################

# Executable
######################################################################################
shared_library('Pelion',
		   './src/window/window.cpp',
		   './src/window/render.cpp',
		   './src/graphics/bufferobj.cpp',
		   './src/graphics/shaders.cpp',
		   './src/input/keyboard.cpp',
		   './main/main.cpp',
           dependencies : [glfw, gl],
           include_directories : include_dir
          )
######################################################################################
